Treat invalid SoftRebootsCount as probably 0

SoftRebootCount is used to query if we should auto-login after a soft
reboot.

If we fail to resolve the property, for example being on an old systemd,
we should still auto-login.

BUG: 522006
FIXED-IN: 6.7.3

(cherry picked from commit b72a10e520b571bdc0bfb7df53742e55d7a18612)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>