src/daemon/DaemonApp.cpp
@@ -103,13 +103,13 @@ bool DaemonApp::tryLockFirstLogin()
 
     if (reply.type() == QDBusMessage::ErrorMessage) {
         qWarning() << "DBus error:" << reply.errorName() << "-" << reply.errorMessage();
-        return false;
+        return true;
     }
 
     const QVariant soft_reboot_count = qvariant_cast<QDBusVariant>(reply.arguments().at(0)).variant();
     if (!soft_reboot_count.isValid()) {
         qWarning() << "DBus variant is invalid:" << reply;
-        return false;
+        return true;
     }
 
     return soft_reboot_count.toUInt() == 0;
